default/objects/ConstructionManagement__c/ConstructionManagement__c.object-meta.xml
<CustomObject>
    <label>Construction Management</label>
    <nameField>
        <displayFormat>GO -{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Construction Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>