default/objects/ConstructionManagement__c/fields/AuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationDate__c</fullName>
    <label>Authorization Date</label>
    <type>DateTime</type>
</CustomField>