default/objects/ConstructionManagement__c/fields/AuthorizedBy__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Construction_Management</relationshipName>
    <type>Lookup</type>
</CustomField>