default/objects/ConstructionManagement__c/fields/FinalDate__c.field-meta.xml
<CustomField>
    <fullName>FinalDate__c</fullName>
    <label>Final Date</label>
    <type>DateTime</type>
</CustomField>