default/objects/ConstructionManagement__c/fields/IDCase__c.field-meta.xml
<CustomField>
    <fullName>IDCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Construction Management</relationshipLabel>
    <relationshipName>Construction_Management</relationshipName>
    <type>Lookup</type>
</CustomField>