default/objects/ConstructionManagement__c/fields/IdOrder__c.field-meta.xml
<CustomField>
    <fullName>IdOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Encargo</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Construction Management</relationshipLabel>
    <relationshipName>GestionDeObra</relationshipName>
    <type>Lookup</type>
</CustomField>