default/objects/ConstructionManagement__c/fields/IdStakeholder__c.field-meta.xml
<CustomField>
    <fullName>IdStakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Stakeholder</label>
    <referenceTo>Stakeholders__c</referenceTo>
    <relationshipName>GestionDeObra</relationshipName>
    <type>Lookup</type>
</CustomField>