default/objects/ConstructionManagement__c/fields/Iva__c.field-meta.xml
<CustomField>
    <fullName>Iva__c</fullName>
    <label>Iva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>